Re design stamp index show

--- a/app/views/stamps/index.html.haml
+++ b/app/views/stamps/index.html.haml
@@ -86,40 +86,43 @@
         %h3.header
           Securit
         %div.ui.divider
-        %div.ui.grid{style: "margin-bottom: -47px;"}
-          %div.six.wide.column
-            %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-              gg.at
-          %div.ten.wide.column
-            %div.bar.float.right
-              %div.ui.purple.progress{style: "background: white;"}
-                %div.bar{style: "width: 70%; z-index: 10; "}
-                  %div.progress
-                    70%
-        %div.ui.grid{style: "margin-bottom: -47px;"}
-          %div.six.wide.column
-            %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-              trello.com
-          %div.ten.wide.column
-            %div.bar.float.right
-              %div.ui.purple.progress{style: "background: white;"}
-                %div.bar{style: "width: 65%; z-index: 10; "}
-                  %div.progress
-                    65%
+        %div.ui.basic.segment{style: "padding: 0 0 0 1rem;"}
+          %div.ui.grid{style: "margin-bottom: -47px;"}
+            %div.six.wide.column
+              %a{style: "color: #A333C8;", href: "https://trello.com"}
+                gg.at
+            %div.ten.wide.column
+              %div.bar.float.right
+                %div.ui.purple.small.progress{style: "background: white;"}
+                  %div.bar{style: "width: 70%; z-index: 10; margin-top: 4px; "}
+                    %div.progress
+                      70%
+          %div.ui.grid{style: "margin-bottom: -47px;"}
+            %div.six.wide.column
+              %a{style: "color: #A333C8;", href: "https://trello.com"}
+                trello.com
+            %div.ten.wide.column
+              %div.bar.float.right
+                %div.ui.purple.small.progress{style: "background: white;"}
+                  %div.bar{style: "width: 65%; z-index: 10; margin-top: 4px; "}
+                    %div.progress
+                      65%
       %div.column
         %h3.header
           Privacy invasive
         %div.ui.divider
-        %div.ui.grid{style: "margin-bottom: -47px;"}
-          %div.six.wide.column
-            %button.ui.purple.basic.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-              lalandamast.dream
-          %div.ten.wide.column
-            %div.bar.float.right
-              %div.ui.purple.progress{style: "background: white;"}
-                %div.bar{style: "width: 15%; z-index: 10; "}
-                  %div.progress
-                    15%
+        %div.ui.basic.segment{style: "padding: 0 0 0 1rem;"}
+          %div.ui.grid{style: "margin-bottom: -47px;"}
+            %div.six.wide.column
+              %a{style: "color: #A333C8;", href: "https://trello.com"}
+                lalandamast.dream
+            %div.ten.wide.column
+              %div.bar.float.right
+                %div.ui.purple.small.progress{style: "background: white;"}
+                  %div.bar{style: "width: 15%; z-index: 10; margin-top: 4px; "}
+                    %div.progress
+                      15%
+
       %div.column
         %h3.header
           Spam
