Re design new stamp show

--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -53,8 +53,8 @@
         %form.ui.form
           %div.field
             %textarea
-          %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-            Add Comment
+            %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+              Create Stamp
   %div.six.wide.right.floated.column
     %div.ui.basic.segment
       %h3
