Attach error messages to the new_stamp form

--- a/app/views/partials/_errors.html.haml
+++ b/app/views/partials/_errors.html.haml
@@ -1,5 +1,5 @@
 - if object.errors.count > 0
-  %div.ui.error.message
+  %div.ui.attached.error.message
     .header
       Invalid
       = object.class.name.titleize
