--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -8,7 +8,7 @@
   %div.nine.wide.column
     = render 'partials/errors', object: @stamp
 
-    %div.ui.styled.accordion{data: {controller: 'new-stamp', new_stamp: {set_percentage: @stamp.percentage, set_label_id: @stamp.label_id}}}
+    %div.ui.styled.fluid.accordion{data: {controller: 'new-stamp', new_stamp: {set_percentage: @stamp.percentage, set_label_id: @stamp.label_id}}}
       = form_for @stamp, html: {class: %w[ui form]} do |f|
         = f.hidden_field :stampable_type, value: 'Domain'
         = f.hidden_field :stampable_id, value: params[:domain_id]
