--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -1,87 +1,69 @@
 %div.ui.two.column.grid.container
   %div.sixteen.wide.column
     %h1.header
-      safing.io
+      = @domain.name
       %a
-        %i.purple.external.icon
+        %i.purple.external.icon{href: @domain.href}
       %div.ui.divider{style: "margin-bottom: -5px;"}
   %div.ten.wide.column
+    - if @domain.stamps.accepted.exists?
+      %div.ui.basic.segment
+        %div.ui.grid
+          - @domain.stamps.accepted.each do |stamp|
+            %div.four.wide.column
+              %h5.ui.middle.aligned.header
+                = stamp.label.name
+            %div.twelve.wide.column
+              %div.bar.float.right
+                %div.ui.purple.small.progress{style: "background: white;"}
+                  %div.bar{style: "width: #{stamp.percentage}%; z-index: 10; "}
+                    %div.progress
+                      = stamp.percentage
+                      \%
+                %div.ui.teal.small.progress{style: "background: white;"}
+                  %div.bar.bartwo{style: "width: 49%; margin-top: -39px;"}
     %div.ui.basic.segment
-      %div.ui.grid
-        %div.three.wide.column
-          %h5.ui.middle.aligned.header
-            Management
-        %div.thirteen.wide.column
-          %div.bar.float.right
-            %div.ui.purple.small.progress{style: "background: white;"}
-              %div.bar{style: "width: 39%; z-index: 10; "}
-                %div.progress
-                  39%
-            %div.ui.teal.small.progress{style: "background: white;"}
-              %div.bar.bartwo{style: "width: 49%; margin-top: -39px;"}
-
-        %div.three.wide.column
-          %h5.ui.middle.aligned.header
-            Business
-        %div.thirteen.wide.column
-          %div.bar.float.right
-            %div.ui.purple.small.progress{style: "background: white;"}
-              %div.bar{style: "width: 80%; z-index: 10; "}
-                %div.progress
-                  80%
-            %div.ui.teal.small.progress{style: "background: white;"}
-              %div.bar.bartwo{style: "width: 60%; margin-top: -39px;"}
-        %div.three.wide.column
-          %h5.ui.middle.aligned.header
-            ADS
-        %div.thirteen.wide.column
-          %div.bar.float.right
-            %div.ui.purple.small.progress{style: "background: white;"}
-              %div.bar{style: "width: 15%; z-index: 10; "}
-                %div.progress
-                  15%
-    %div.ui.basic.segment
-      %h3
-        Suggested
-        %div.ui.divider{ style: "margin-top: 0px;"}
-      %div.ui.grid
-        %div.three.wide.column
-          %h5.ui.middle.aligned.header
-            Animals
-        %div.thirteen.wide.column
-          %div.bar.float.right
-            %div.ui.teal.small.progress{style: "background: white;"}
-              %div.bar{style: "width: 70%; z-index: 10; "}
-                %div.progress
-                  70%
-
-        %div.three.wide.column
-          %h5.ui.middle.aligned.header
-            Sport
-        %div.thirteen.wide.column
-          %div.bar.float.right
-            %div.ui.teal.small.progress{style: "background: white;"}
-              %div.bar{style: "width: 55%; z-index: 10; "}
-                %div.progress
-                  55%
-      %div.ui.basic.segment{style: "padding: 0;"}
-        %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-          Add Stamp
+      - if @domain.stamps.in_progress.exists?
+        %h3
+          Suggested
+          %div.ui.divider{ style: "margin-top: 0px;"}
+        %div.ui.grid
+          - @domain.stamps.in_progress.each do |sibling|
+            %div.four.wide.column
+              %h5.ui.middle.aligned.header
+                = sibling.label.name
+            %div.twelve.wide.column
+              %div.bar.float.right
+                %div.ui.teal.small.progress{style: "background: white;"}
+                  %div.bar{style: "width: #{sibling.percentage}%; z-index: 10; "}
+                    %div.progress
+                      = sibling.percentage
+                      \%
+        %div.ui.basic.segment{style: "padding: 0;"}
+          %a{href: new_stamp_path}
+            %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+              Add Stamp
   %div.five.wide.right.floated.column
     %div.ui.basic.segment
       %div.ui.relaxed.list
         %div.item
-          %i.clock.outline.icon
-          %div.content
-            5 months ago
-        %div.item
           %i.user.icon
           %div.content
-            Karl Marx
+            = link_to user_path(@domain.creator_id) do
+              = @domain.creator.username
+            = link_to @domain.creator.username, user_path(@domain.creator_id)
+            %a{href: user_path(@domain.creator_id)}
+              = @domain.creator.username
+        %div.item
+          %i.clock.outline.icon
+          %div.content
+            = time_ago_in_words(@domain.created_at)
+            ago
         %div.item
           %i.history.icon
           %div.content
-            1 months ago
+            = time_ago_in_words(@domain.updated_at)
+            ago
         %div.ui.divider{style: "margin-bottom: -23px;"}
     %div.ui.basic.segment
       %div.ui.relaxed.list
