--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -11,8 +11,7 @@
 
     %div.ui.styled.fluid.accordion{data: {controller: 'new-stamp', new_stamp: {set_percentage: @stamp.percentage, set_label_id: @stamp.label_id}}}
       = form_for @stamp, html: {class: %w[ui form]} do |f|
-        = f.hidden_field :stampable_type, value: 'Domain'
-        = f.hidden_field :stampable_id, value: params[:domain_id]
+        = f.hidden_field :domain, value: params[:domain] || @stamp.domain.name
         -# render "shared/errors", object: @stamp
         %div.title
           1. Select Label
