--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -2,8 +2,8 @@
   %div.sixteen.wide.column
     %h1.header
       = @domain.name
-      %a
-        %i.purple.external.icon{href: @domain.href}
+      %a{href: @domain.href}
+        %i.purple.external.icon
       %div.ui.divider{style: "margin-bottom: -5px;"}
   %div.ten.wide.column
     - if @domain.stamps.accepted.exists?
