--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -40,7 +40,7 @@
                       = sibling.percentage
                       \%
         %div.ui.basic.segment{style: "padding: 0;"}
-          %a{href: new_stamp_path}
+          = link_to new_stamp_path(domain_name: @domain.name) do
             %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
               Add Stamp
   %div.five.wide.right.floated.column
@@ -50,9 +50,6 @@
           %i.user.icon
           %div.content
             = link_to user_path(@domain.creator_id) do
-              = @domain.creator.username
-            = link_to @domain.creator.username, user_path(@domain.creator_id)
-            %a{href: user_path(@domain.creator_id)}
               = @domain.creator.username
         %div.item
           %i.clock.outline.icon
