--- a/app/views/domains/show.html.haml
+++ b/app/views/domains/show.html.haml
@@ -8,6 +8,9 @@
   %div.ten.wide.column
     - if @domain.stamps.accepted.exists?
       %div.ui.basic.segment
+        %h3
+          Accepted
+          %div.ui.divider
         %div.ui.grid
           - @domain.stamps.accepted.each do |stamp|
             %div.four.wide.column
@@ -22,11 +25,11 @@
                       \%
                 %div.ui.teal.small.progress{style: "background: white;"}
                   %div.bar.bartwo{style: "width: 49%; margin-top: -39px;"}
-    %div.ui.basic.segment
-      - if @domain.stamps.in_progress.exists?
+    - if @domain.stamps.in_progress.exists?
+      %div.ui.basic.segment
         %h3
           Suggested
-          %div.ui.divider{ style: "margin-top: 0px;"}
+          %div.ui.divider
         %div.ui.grid
           - @domain.stamps.in_progress.each do |sibling|
             %div.four.wide.column
@@ -39,10 +42,11 @@
                     %div.progress
                       = sibling.percentage
                       \%
-        %div.ui.basic.segment{style: "padding: 0;"}
-          = link_to new_stamp_path(domain_name: @domain.name) do
-            %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
-              Add Stamp
+    - if user_signed_in?
+      %div.ui.basic.segment
+        = link_to new_stamp_path(domain_name: @domain.name) do
+          %button.ui.purple.basic.big.button{style: "margin-bottom: 1rem; padding: 6px; box-shadow: 0px 0px 2px 2px #A333C8 inset !important; "}
+            Add Stamp
   %div.five.wide.right.floated.column
     %div.ui.basic.segment
       %div.ui.relaxed.list
@@ -62,10 +66,18 @@
             = time_ago_in_words(@domain.updated_at)
             ago
         %div.ui.divider{style: "margin-bottom: -23px;"}
-    %div.ui.basic.segment
-      %div.ui.relaxed.list
-        %h3.ui.header
-          Subdomains
-        %div.item
-          %a
-            assets.trello.com
+    - if @domain.children.exists?
+      %div.ui.basic.segment
+        %div.ui.relaxed.list
+          %h3.ui.header
+            Subdomains
+          - @domain.children.each do |subdomain|
+            %div.item
+              = link_to subdomain.name, domain_path(subdomain.name)
+    - if @domain.parent.present?
+      %div.ui.basic.segment
+        %div.ui.relaxed.list
+          %h3.ui.header
+            Main Domain
+          %div.item
+            = link_to @domain.parent.name, domain_path(@domain.parent.name)
