--- a/app/views/stamps/new.html.haml
+++ b/app/views/stamps/new.html.haml
@@ -7,7 +7,7 @@
         %i.purple.external.icon
     %div.ui.divider{style: "margin-bottom: -5px;"}
   %div.nine.wide.column
-    = render 'partials/errors', object: @stamp
+    = render 'partials/errors', object: @stamp, attached: true
 
     %div.ui.styled.fluid.accordion{data: {controller: 'new-stamp', new_stamp: {set_percentage: @stamp.percentage, set_label_id: @stamp.label_id}}}
       = form_for @stamp, html: {class: %w[ui form]} do |f|
