--- a/app/assets/stylesheets/partials/global.scss
+++ b/app/assets/stylesheets/partials/global.scss
@@ -33,3 +33,8 @@
     background-color: #FFE3FF !important;
   }
 }
+
+.ui.image.label {
+  margin-top: 0.34em !important;
+  margin-bottom: 0.34em !important;
+}
