--- a/app/views/votes/_caret.html.haml
+++ b/app/views/votes/_caret.html.haml
@@ -1,5 +1,5 @@
-%button.ui.button.icon{style: "margin-bottom: 0rem; padding: 2px; border: 0px !important; background-color: white;"}
+%button.ui.button.icon{style: "padding: 0px; background-color: white;"}
   - if type == 'upvote'
-    %i.hand.caret.up.big.icon{class: caret_class_for(@stamp, type)}
+    %i.hand.fitted.caret.up.huge.icon{class: caret_class_for(@stamp, type)}
   - elsif type == 'downvote'
-    %i.vertically.flipped.hand.caret.up.big.icon{class: caret_class_for(@stamp, type)}
+    %i.hand.vertically.flipped.fitted.caret.up.huge.icon{class: caret_class_for(@stamp, type)}
