--- a/app/views/semantic/_header.html.haml
+++ b/app/views/semantic/_header.html.haml
@@ -3,9 +3,10 @@
     %img{src: '/assets/basic_logo.png'}
     %h2{type: 'text'}
       Stamp
-  %a{class: 'item', href: '/users/133', style: 'padding: 0 6px;'}
-    %img.ui.avatar.image{src: '/assets/portmaster.png'}
-    Vance
+  - if user_signed_in?
+    =link_to user_path(current_user), class: 'item' do
+      %img.ui.avatar.image{src: '/assets/portmaster.png'}
+      = current_user.username
   .menu
 
   .right.menu
